# shift

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  TFIDF_POOLING_IMPLEMENTATION_REPORT.md  new_plan_code_integration.txt  pyproject.toml  pytest.ini  requirements.txt
data/_tmp_plot_check/plots/: plot_summary.json
data/e5_pooling/: dataset_summary.json  evaluation_partial_comparison.json  idf_token_id.json  test_records.jsonl  test_triplets.jsonl  validation_records.jsonl  validation_triplets.jsonl
data/e5_pooling/checkpoints/: training_history.json
data/e5_pooling/checkpoints/plots/: plot_summary.json
scripts/: _e5_common.sh  evaluate_e5_pooling.sh  prepare_e5_data.sh  run_e5_pipeline.sh  setup_e5_env.sh  train_e5_last_block.sh  train_e5_pooling.sh
src/app/: asr.py  consts.py  e5.py  e5_evaluate.py  e5_experiment_data.py  e5_prepare_data.py  e5_train.py  main.py  modeling_xlm_roberta.py  mongo.py  new_main.py  question_model.py  schemas.py  server.py  utils.py  vector_db.py  web.py  xlsx_reader.py
src/config/: .dockerfile  .public.env  docker-compose.yml
src/config/requirements/: e5.txt  embedding_experiments.txt  main.txt  mongo.txt  question_model.txt  server.txt  tests.txt  vector_db.txt  web.txt
src/data/: ExportSDLab.xlsx  calibration.json  services.json  Описание услуг.xlsx
src/tests/integration/: main.py
src/tests/unit/: test_e5_pipeline.py
